--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "todolist-v1",
+  "name": "todolist-v2",
   "version": "1.0.0",
-  "description": "",
+  "description": "My todolist",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Himanshu Bansal",
   "license": "ISC",
+  "engines": {
+    "node": "16.17.0" 
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
